# Adaptive-Compressed-World-Model-Framework

./: .gitignore  README.md  cleanup_flask.sh  pyproject.toml  rebuild_frontend.sh  requirements.txt  run_server.sh  setup.py  start.sh  start_nextjs.sh  test_upload.txt
data/knowledge/: 03dd3d5a-38ce-407e-af69-bcc5bbb63c44.json  110bd433-9cfe-40b1-a647-337ae945dfd0.json  25e29aaf-8d96-445e-8a56-d49373e030b3.json  27935e57-ebc6-4350-884d-1d9def912f0b.json  3303933e-aaf3-483e-a4aa-452a8b3c9740.json  5564d326-036f-4cc1-a187-a83752498d9b.json  6effdae5-ea25-4bfa-97a2-16806bbbb922.json  8efa292b-dd0d-42fd-8b15-d70e5b59b388.json  b52a6af4-294a-4b29-937a-1aa923a80fb8.json  cef85fdc-cb67-4377-b76d-86558930eb38.json  d0886c3d-7458-4441-9482-1a296763fc60.json  d6215f37-60ac-40c5-8110-f2b902b1a30b.json  d7d03284-45e0-4fda-a21b-c2cfa9b2872c.json  knowledge_graph.json
data/knowledge_gui/: 5a865bd7-13da-4c62-98a0-899f35d13c35.json  cf12d72c-1ead-4210-92c8-554dac970fcf.json  f2bec88c-9a18-4843-b51d-d3ef51879435.json  f2ff916b-e8f0-4bcf-b24c-bf9920706bf1.json  f4e62965-5478-4abc-a258-6a7c640bc5f1.json
data/knowledge_llm/: 142192be-3070-49b0-b29b-687ba842d0e6.json  (+11 more)
docs/: architecture.md  development.md  implementation_plan.md  theory.md
examples/: basic_simulation.py  ioa_monitor_analysis.py  knowledge_system_demo.py  llm_context_analysis.py
gui/: README.md  app.py  pdf_handler.py  requirements.txt  run_server.sh  setup_and_run.sh
notebooks/: knowledge_system_demo.ipynb
scripts/: install.sh  setup_ollama.py
src/: __init__.py
tests/: test_knowledge_system.py
(+52 files in other folders)
