[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acwmf"
version = "0.1.0"
description = "Adaptive Compressed World Model Framework"
readme = "README.md"
authors = [
    {name = "ACWMF Team"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6.0",
    "redis>=4.0.0",
    "torch>=1.10.0",
    "transformers>=4.15.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "asyncio>=3.4.3",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json"]
